[package]
name = "merkle-plonky2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

plonky2 = { path = "../plonky2/plonky2"}
plonky2_util = { path = "../plonky2/util"}
plonky2_field = { path = "../plonky2/field"}

plonky2_sha256 = {path="../plonky2-sha256"}
plonky2_u32 = "0.1.0"